--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,8 +13,12 @@
     "@axon/logger": "workspace:*",
     "body-parser": "2.2.0",
     "cors": "2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "5.1.0",
     "helmet": "8.1.0",
-    "express": "5.1.0"
+    "lodash": "^4.17.21",
+    "mongoose": "^8.18.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@axon/eslint-config": "workspace:*",
@@ -22,6 +26,7 @@
     "@types/body-parser": "1.19.6",
     "@types/cors": "2.8.19",
     "@types/express": "5.0.3",
+    "@types/lodash": "^4.17.20",
     "@types/node": "24.3.0",
     "eslint": "9.34.0",
     "tsup": "8.5.0",
