feat(user): add user module with validation & routes
- Created User model and repository for MongoDB
- Defined DTOs and Zod schemas in new @axon/types package
- Added validate and errorHandler middlewares
- Implemented controller with type-safe request handling

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "@axon/typescript-config/base.json",
   "compilerOptions": {
     "lib": ["ES2024"],
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": "./",
+    "paths": {
+      "@middleware/*": ["src/middleware/*"]
+    }
   },
   "include": ["."],
   "exclude": ["node_modules", "dist"]
