--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@axon/logger": "workspace:*",
+    "@axon/types": "workspace:*",
+    "@axon/utils": "workspace:*",
     "body-parser": "2.2.0",
     "cors": "2.8.5",
     "dotenv": "^17.2.1",
