feat(class): add class module with CRUD routes
- Also added classes relation in User model

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "dist",
     "baseUrl": "./",
     "paths": {
-      "@middleware/*": ["src/middleware/*"]
+      "@middleware/*": ["src/middleware/*"],
+      "@v1/*": ["src/modules/v1/*"]
     }
   },
   "include": ["."],
