feat(parent): add 'create parent' route with token
- Created a student route to generate token with expiry date
- Added a users/parent route that excepts a token and creates a parent
- Added users/:id/child route to add a child on existing parent
- Implemented cascading deletes

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -6,7 +6,8 @@
     "baseUrl": "./",
     "paths": {
       "@middleware/*": ["src/middleware/*"],
-      "@v1/*": ["src/modules/v1/*"]
+      "@v1/*": ["src/modules/v1/*"],
+      "@types": ["src/types/index.js"]
     }
   },
   "include": ["."],
