--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
     "@axon/logger": "workspace:*",
     "@axon/types": "workspace:*",
     "@axon/utils": "workspace:*",
+    "@clerk/express": "^1.7.29",
     "body-parser": "2.2.0",
     "cors": "2.8.5",
     "dotenv": "^17.2.1",
