--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
     "helmet": "8.1.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.18.0",
+    "socket.io": "^4.8.1",
     "uuid": "^12.0.0",
     "zod": "^4.1.5"
   },
